--- a/src/main/webapp/app/entities/attraction/attraction-update.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction-update.component.html
@@ -12,106 +12,102 @@
                 <div class="form-group">
                     <label class="form-control-label" for="field_sygicTravelId">Sygic Travel Id</label>
                     <input type="text" class="form-control" name="sygicTravelId" id="field_sygicTravelId"
-                           [(ngModel)]="attraction.sygicTravelId"/>
+                        [(ngModel)]="attraction.sygicTravelId" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_rating">Rating</label>
                     <input type="number" class="form-control" name="rating" id="field_rating"
-                           [(ngModel)]="attraction.rating"/>
+                        [(ngModel)]="attraction.rating" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_latitude">Latitude</label>
                     <input type="number" class="form-control" name="latitude" id="field_latitude"
-                           [(ngModel)]="attraction.latitude"/>
+                        [(ngModel)]="attraction.latitude" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_longitude">Longitude</label>
                     <input type="number" class="form-control" name="longitude" id="field_longitude"
-                           [(ngModel)]="attraction.longitude"/>
+                        [(ngModel)]="attraction.longitude" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                           [(ngModel)]="attraction.name"/>
+                        [(ngModel)]="attraction.name" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_marker">Marker</label>
                     <input type="text" class="form-control" name="marker" id="field_marker"
-                           [(ngModel)]="attraction.marker"/>
+                        [(ngModel)]="attraction.marker" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_perex">Perex</label>
                     <textarea class="form-control" name="perex" id="field_perex"
-                              [(ngModel)]="attraction.perex"></textarea>
+                        [(ngModel)]="attraction.perex" ></textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_thumbnailUrl">Thumbnail Url</label>
                     <input type="text" class="form-control" name="thumbnailUrl" id="field_thumbnailUrl"
-                           [(ngModel)]="attraction.thumbnailUrl"/>
+                        [(ngModel)]="attraction.thumbnailUrl" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_categories">Categories</label>
                     <input type="text" class="form-control" name="categories" id="field_categories"
-                           [(ngModel)]="attraction.categories"/>
+                        [(ngModel)]="attraction.categories" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsSummary">Ds Summary</label>
                     <textarea class="form-control" name="dsSummary" id="field_dsSummary"
-                              [(ngModel)]="attraction.dsSummary"></textarea>
+                        [(ngModel)]="attraction.dsSummary" ></textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsIcon">Ds Icon</label>
                     <input type="text" class="form-control" name="dsIcon" id="field_dsIcon"
-                           [(ngModel)]="attraction.dsIcon"/>
+                        [(ngModel)]="attraction.dsIcon" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_dsApparentTemperatureHigh">Ds Apparent Temperature
-                        High</label>
-                    <input type="number" class="form-control" name="dsApparentTemperatureHigh"
-                           id="field_dsApparentTemperatureHigh"
-                           [(ngModel)]="attraction.dsApparentTemperatureHigh"/>
+                    <label class="form-control-label" for="field_dsApparentTemperatureHigh">Ds Apparent Temperature High</label>
+                    <input type="number" class="form-control" name="dsApparentTemperatureHigh" id="field_dsApparentTemperatureHigh"
+                        [(ngModel)]="attraction.dsApparentTemperatureHigh" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_dsApparentTemperatureLow">Ds Apparent Temperature
-                        Low</label>
-                    <input type="number" class="form-control" name="dsApparentTemperatureLow"
-                           id="field_dsApparentTemperatureLow"
-                           [(ngModel)]="attraction.dsApparentTemperatureLow"/>
+                    <label class="form-control-label" for="field_dsApparentTemperatureLow">Ds Apparent Temperature Low</label>
+                    <input type="number" class="form-control" name="dsApparentTemperatureLow" id="field_dsApparentTemperatureLow"
+                        [(ngModel)]="attraction.dsApparentTemperatureLow" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsDewPoint">Ds Dew Point</label>
                     <input type="number" class="form-control" name="dsDewPoint" id="field_dsDewPoint"
-                           [(ngModel)]="attraction.dsDewPoint"/>
+                        [(ngModel)]="attraction.dsDewPoint" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsHumidity">Ds Humidity</label>
                     <input type="number" class="form-control" name="dsHumidity" id="field_dsHumidity"
-                           [(ngModel)]="attraction.dsHumidity"/>
+                        [(ngModel)]="attraction.dsHumidity" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsPressure">Ds Pressure</label>
                     <input type="number" class="form-control" name="dsPressure" id="field_dsPressure"
-                           [(ngModel)]="attraction.dsPressure"/>
+                        [(ngModel)]="attraction.dsPressure" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsWindSpeed">Ds Wind Speed</label>
                     <input type="number" class="form-control" name="dsWindSpeed" id="field_dsWindSpeed"
-                           [(ngModel)]="attraction.dsWindSpeed"/>
+                        [(ngModel)]="attraction.dsWindSpeed" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsWindGust">Ds Wind Gust</label>
                     <input type="number" class="form-control" name="dsWindGust" id="field_dsWindGust"
-                           [(ngModel)]="attraction.dsWindGust"/>
+                        [(ngModel)]="attraction.dsWindGust" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsCloudCover">Ds Cloud Cover</label>
                     <input type="number" class="form-control" name="dsCloudCover" id="field_dsCloudCover"
-                           [(ngModel)]="attraction.dsCloudCover"/>
+                        [(ngModel)]="attraction.dsCloudCover" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_dsVisibility">Ds Visibility</label>
                     <input type="number" class="form-control" name="dsVisibility" id="field_dsVisibility"
-                           [(ngModel)]="attraction.dsVisibility"/>
+                        [(ngModel)]="attraction.dsVisibility" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_adultPrice">Adult Price</label>
@@ -148,18 +144,6 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="field_groupTypes">Group Types</label>
-                    <select class="form-control" id="field_groupTypes" multiple name="groupTypes" [(ngModel)]="attraction.groupTypes">
-                        <option [ngValue]="getSelected(attraction.groupTypes, attractionGroupTypeOption)" *ngFor="let attractionGroupTypeOption of attractiongrouptypes; trackBy: trackAttractionGroupTypeById">{{attractionGroupTypeOption.id}}</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="field_eventTypes">Event Types</label>
-                    <select class="form-control" id="field_eventTypes" multiple name="eventTypes" [(ngModel)]="attraction.eventTypes">
-                        <option [ngValue]="getSelected(attraction.eventTypes, attractionEventTypeOption)" *ngFor="let attractionEventTypeOption of attractioneventtypes; trackBy: trackAttractionEventTypeById">{{attractionEventTypeOption.id}}</option>
-                    </select>
-                </div>
             </div>
             <div>
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
