--- a/src/main/webapp/app/entities/attraction/attraction.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction.component.html
@@ -15,64 +15,26 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span>ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th jhiSortBy="sygicTravelId"><span>Sygic Travel Id</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="rating"><span>Rating</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="latitude"><span>Latitude</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="longitude"><span>Longitude</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
+            <th jhiSortBy="sygicTravelId"><span>Sygic Travel Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="rating"><span>Rating</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="latitude"><span>Latitude</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="longitude"><span>Longitude</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="name"><span>Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th jhiSortBy="marker"><span>Marker</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="perex"><span>Perex</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="thumbnailUrl"><span>Thumbnail Url</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="categories"><span>Categories</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsSummary"><span>Ds Summary</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsIcon"><span>Ds Icon</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsApparentTemperatureHigh"><span>Ds Apparent Temperature High</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsApparentTemperatureLow"><span>Ds Apparent Temperature Low</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsDewPoint"><span>Ds Dew Point</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsHumidity"><span>Ds Humidity</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsPressure"><span>Ds Pressure</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsWindSpeed"><span>Ds Wind Speed</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsWindGust"><span>Ds Wind Gust</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsCloudCover"><span>Ds Cloud Cover</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
-                <th jhiSortBy="dsVisibility"><span>Ds Visibility</span>
-                    <fa-icon [icon]="'sort'"></fa-icon>
-                </th>
+            <th jhiSortBy="marker"><span>Marker</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="perex"><span>Perex</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="thumbnailUrl"><span>Thumbnail Url</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="categories"><span>Categories</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsSummary"><span>Ds Summary</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsIcon"><span>Ds Icon</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsApparentTemperatureHigh"><span>Ds Apparent Temperature High</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsApparentTemperatureLow"><span>Ds Apparent Temperature Low</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsDewPoint"><span>Ds Dew Point</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsHumidity"><span>Ds Humidity</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsPressure"><span>Ds Pressure</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsWindSpeed"><span>Ds Wind Speed</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsWindGust"><span>Ds Wind Gust</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsCloudCover"><span>Ds Cloud Cover</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="dsVisibility"><span>Ds Visibility</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="adultPrice"><span>Adult Price</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="childPrice"><span>Child Price</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="accessible"><span>Accessible</span> <fa-icon [icon]="'sort'"></fa-icon></th>
