endpoints in to create attractionpurchase and take action

--- a/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-detail.component.html
+++ b/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-detail.component.html
@@ -13,9 +13,17 @@
                 <dd>
                     <span>{{attractionPurchase.activity}}</span>
                 </dd>
-                <dt><span>Distance</span></dt>
+                <dt><span>User Distance</span></dt>
                 <dd>
-                    <span>{{attractionPurchase.distance}}</span>
+                    <span>{{attractionPurchase.userDistance}}</span>
+                </dd>
+                <dt><span>User Latitude</span></dt>
+                <dd>
+                    <span>{{attractionPurchase.userLatitude}}</span>
+                </dd>
+                <dt><span>User Longitude</span></dt>
+                <dd>
+                    <span>{{attractionPurchase.userLongitude}}</span>
                 </dd>
                 <dt><span>Created At</span></dt>
                 <dd>
